fix button shifting

--- a/styles/modules/_button-group.scss
+++ b/styles/modules/_button-group.scss
@@ -3,11 +3,6 @@
 
   .btn {
     flex: 0 1 130px;
-
-    &:last-child {
-      margin-left: auto;
-      margin-right: 0;
-    }
   }
 }
 
